# rose

./: .gitignore  MANIFEST.in  README.md  build_rosecode.sh  install.sh  pyproject.toml  requirements.txt  rose.py  setup.py  tui.py  util.py
.devcontainer/: devcontainer.json
benchmark/: README.md  benchmark_results.json  rosbag_benchmark.py  run_benchmarks.py  visualize.py
benchmark/benchmark_results/: report.md
benchmark/benchmark_stats/: all_results.json  statistical_report.md
docker/: Dockerfile  Dockerfile-dev  go_docker.sh
docs/notes/: TODOS.md  bagmanager.puml  container-widgets.md  css-to-class.md  default_css_and_render.md  dep.puml  reactivity.md  worker.md
ros/: build_rosecode.sh  setup.sh
ros/src/rose_core/: CMakeLists.txt  package.xml
ros/src/rose_core/include/: rosbag_io.h
ros/src/rose_core/src/: rosbag_io.cpp  rosbag_io.h  rosbag_io_py.cpp
roseApp/: cassette_theme.py  config.json  rose.py  style.tcss  tui.py  util.py
roseApp/components/: BagExplorer.py  BagSelector.py  ControlPanel.py  Dialog.py  Panel.py  StatusBar.py  TaskTable.py  TopicPanel.py  TopicTreePanel.py
roseApp/core/: BagManager.py  Types.py  parser.py  util.py
roseApp/themes/: cassette_theme.py
roseApp/whitelists/: example.txt
src/rose_core/: CMakeLists.txt
src/rose_core/src/: rosbag_io.cpp
