<?xml version="1.0"?>
<package format="2">
  <name>rose_core</name>
  <version>0.1.0</version>
  <description>The rose_core package</description>
  <maintainer email="fake@fake.com">Lingfeng AI</maintainer>
  <license>MIT</license>

  <url type="website"></url>




  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>rosbag_storage</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>python3-pybind11</build_depend>

  <build_export_depend>rosbag</build_export_depend>
  <build_export_depend>rosbag_storage</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf2_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>

  <exec_depend>rosbag</exec_depend>
  <exec_depend>rosbag_storage</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>python3-pybind11</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
